# vary

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  varargs.rs
tests/testing/: Cargo.toml
tests/testing/src/: main.rs
