[package]
name = "vary"
version = "0.1.0"
authors = [ "Nobody <nobodyawesomer@proton.me>" ]
edition = "2021"
description = "Variadics in rust using proc macros!"
repository = "https://github.com/nobodyawesomer/vary"
license = "MIT"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.18"
syn = "1.0.96"
